--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             position: fixed; /* 画面スクロールしても固定 */
             right: -5px; /* さらに右へ */
             top: 80%; /* 画面中央に固定 */
-            transform: translateY(-50%) translateX(15px); /* 中央配置と右ずらし */
-            background: #13ca5e;
+            transform: translateY(-50%) translateX(13px); /* 中央配置と右ずらし */
+            background: #0068b7;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -89,7 +89,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #0068b7, #004479);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -114,7 +114,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #0068b7;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -140,12 +140,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #0068b7;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #0068b7;
         }
 
         input[type="text"],
@@ -278,20 +278,20 @@
 
 /* 基本スタイル */
 .info-text {
-    margin: 20px 0;
+    margin: 20px auto; /* 横中央に配置 */
     font-family: "Noto Sans JP", "Roboto", sans-serif;
     font-size: 14px;
-    color: #333; /* 読みやすい濃い文字色 */
+    color: #333;
     background-color: #f8f9fa;
     line-height: 1.8;
-    text-align: left;
+    text-align: center; /* テキスト中央揃え */
     word-wrap: break-word;
     padding: 20px;
     border-radius: 8px;
     border: 1px solid #ced4da;
-    max-width: 800px; /* 横幅制限 */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 軽い影を追加 */
-    overflow-y: auto; /* 長文スクロール対応 */
+    max-width: 800px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
 }
 
 /* 見出しスタイル */
@@ -340,7 +340,7 @@
             line-height: 1.5;
             text-align: center;
             word-wrap: break-word;
-            background-color: #eef9f5;
+            background-color: #e0fff3;
             /* 青っぽい背景色を追加 */
             padding: 10px;
             border-radius: 4px;
@@ -363,7 +363,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #0068b7;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -372,7 +372,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #0068b7;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -388,11 +388,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #0068b7;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #0068b7;
         }
 
         @media (max-width: 768px) {
@@ -441,7 +441,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #0068b7;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -474,13 +474,13 @@
         text-align: center;
         font-size: 14px;
         margin-bottom: 10px;
-        background: #4a90e2;
+        background: #0068b7;
         border-radius: 5px;
         transition: background 0.3s;
     }
 
     .sidebar a:hover {
-        background: #357ac4;
+        background: #0068b7;
     }
 
     /* スクロール用のセクション */
@@ -520,7 +520,7 @@
             <button type="button" id="fourpriority" onclick="selectpriority(this)">🚶‍♀️ 姿勢の歪み・猫背</button>
             <button type="button" id="fivepriority" onclick="selectpriority(this)">👣 偏平足・外反母趾が気になる<br>・<br>歩いていると足が疲れやすい</button>
             <button type="button" id="onepriority" onclick="selectpriority(this)">💤 慢性的な疲労・不調がある</button>
-            <button type="button" id="onepriority" onclick="selectpriority(this)">👶 小児の頭の歪み</button>
+            <button type="button" id="onepriority" onclick="selectpriority(this)">👶 小児の頭の歪み</button>
             <button type="button" id="onepriority" onclick="selectpriority(this)">😓 睡眠の質が悪い・朝スッキリしない</button>
             <button type="button" id="onepriority" onclick="selectpriority(this)">😔 ダイエットが続かない・リバウンドしてしまう</button>
             <button type="button" id="onepriority" onclick="selectpriority(this)">🧓 顔のたるみ・老け顔が気になる</button>
@@ -528,7 +528,7 @@
             <button type="button" id="onepriority" onclick="selectpriority(this)">😩 体のむくみ・冷えが気になる</button>
         </div>
 
-        <div class="label">自由記述</div>
+        <div class="info-textmemo">⇩自由回答⇩</div>
         <textarea id="message4" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">当院に興味を持ったきっかけを<br>教えてください（複数選択可）</div>
@@ -541,31 +541,29 @@
             <button type="button" id="sixdemand" onclick="selectdemand(this)">🏢 家・職場の近く</button>
         </div>
 
-
-        <div class="label">当院で受けてみたいメニューはありますか？（複数選択可）</div>
+        <div class="info-textmemo">⇩自由回答⇩</div>
         <textarea id="message5" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">来店頻度<br>(ネイルサロンにどのくらいの頻度で通っているか)</div>
+        <div class="label">当院で受けてみたいメニューはありますか？</div>
         <div class="chance-buttons">
             <button type="button" id="onechance" onclick="selectchance(this)">💆‍♀️ 肩こり・腰痛ケア</button>
             <button type="button" id="twochance" onclick="selectchance(this)">🦴 姿勢矯正・骨盤矯正</button>
             <button type="button" id="threechance" onclick="selectchance(this)">👣 足のサイズ測定、足圧計測</button>
             <button type="button" id="fourchance" onclick="selectchance(this)">🧠 自律神経調整</button>
-            <button type="button" id="onechance" onclick="selectchance(this)">👶 小児の頭の歪み</button>
+            <button type="button" id="onechance" onclick="selectchance(this)">👶 小児の頭の歪み</button>
             <button type="button" id="twochance" onclick="selectchance(this)">💪 トレーニング・エクササイズ</button>
             <button type="button" id="threechance" onclick="selectchance(this)">🧘‍♂️ ピラティス</button>
             <button type="button" id="fourchance" onclick="selectchance(this)">🚲 ボディライン調整・ダイエット</button>
-            <button type="button" id="threechance" onclick="selectchance(this)">🧬 腸活・体内ケア（ファスティング・栄養アドバイス）</button>
+            <button type="button" id="threechance" onclick="selectchance(this)">🧬 腸活・体内ケア<br>（ファスティング・栄養アドバイス）</button>
             <button type="button" id="fourchance" onclick="selectchance(this)">💆‍♀️ 美肌脱毛・光フェイシャル</button>
             <button type="button" id="onechance" onclick="selectchance(this)">🌿 リラクゼーション・オイルリンパケア</button>
             <button type="button" id="twochance" onclick="selectchance(this)">💡 肌のお悩み（シミ・毛穴・くすみ・乾燥など）</button>
             <button type="button" id="threechance" onclick="selectchance(this)">🧴 ホームケア・スキンケア商品</button>
             <button type="button" id="fourchance" onclick="selectchance(this)">📷 肌診断（iPAS）に興味がある</button>
             <button type="button" id="threechance" onclick="selectchance(this)">🤔 まだ決めていない</button>
-            <button type="button" id="fourchance" onclick="selectchance(this)">📷 肌診断（iPAS）に興味がある</button>
         </div>
 
-        <div class="label">💌 その他（自由記述）</div>
+        <div class="info-textmemo">⇩自由回答⇩</div>
         <textarea id="message7" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">年齢層を教えてください</div>
@@ -580,14 +578,19 @@
 
         <div class="label">性別を教えてください</div>
         <div class="delivery-buttons">
-            <button type="button" id="onedelivery" onclick="selectdelivery(this)">薬品アレルギー有り</button>
-            <button type="button" id="twodelivery" onclick="selectdelivery(this)">薬品アレルギー無し</button>
+            <button type="button" id="onedelivery" onclick="selectdelivery(this)">男性</button>
+            <button type="button" id="twodelivery" onclick="selectdelivery(this)">女性</button>
+            <button type="button" id="twodelivery" onclick="selectdelivery(this)">その他</button>
         </div>
 
         <div class="label">今後、受け取りたい情報はありますか？</div>
         <div class="information-buttons">
-            <button type="button" id="oneinformation" onclick="selectinformation(this)">薬品アレルギー有り</button>
-            <button type="button" id="twoinformation" onclick="selectinformation(this)">薬品アレルギー無し</button>
+            <button type="button" id="oneinformation" onclick="selectinformation(this)">🎁 限定クーポン・キャンペーン案内</button>
+            <button type="button" id="twoinformation" onclick="selectinformation(this)">📅 ご予約の空き状況</button>
+            <button type="button" id="oneinformation" onclick="selectinformation(this)">💡 健康に関する豆知識</button>
+            <button type="button" id="twoinformation" onclick="selectinformation(this)">💪トレーニング・セルフケアについて</button>
+            <button type="button" id="oneinformation" onclick="selectinformation(this)">✨ 美容・スキンケアの豆知識</button>
+            <button type="button" id="twoinformation" onclick="selectinformation(this)">🛍 商品の使い方・レビュー紹介</button>
         </div>
 
         <div class="label">ご来院についてお聞かせください</div>
@@ -711,7 +714,8 @@
             const message = document.getElementById('message').value;
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
-            const message4 = document.getElementById('message4').value;
+    // message4をpriorityCountに代入
+    const priorityCount = message4;
             const message5 = document.getElementById('message5').value;
             const message7 = document.getElementById('message7').value;
             priorityCount: priorityCount;
@@ -813,7 +817,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前】\n・${formData.message2}\n\n【生年月日】\n・${formData.message3}\n\n【電話番号】\n・${formData.message4}\n\n【お住まい】\n・${formData.message5}\n\n【ご職業】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}\n\n【知人の紹介名】\n・${formData.message7}\n\n【来店頻度】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n【長さ出し左右本数】\n・${formData.message8}\n\n【重要項目の同意】\n・${formData.budgetyCount}\n\n【長さ出し左右本数】\n・${formData.visitreservationCount}\n\n【重要項目の同意】\n・${formData.informationCount}`
+                text: `≪アンケート≫\n【氏名（漢字）】\n・${formData.message}\n\n【氏名（カナ）】\n・${formData.message2}\n\n【生年月日】\n・${formData.message3}\n\n【気になるお悩み】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}\n\n【お住まい】\n・${formData.message5}\n\n【知人の紹介名】\n・${formData.message7}\n\n【来店頻度】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n【長さ出し左右本数】\n・${formData.message8}\n\n【重要項目の同意】\n・${formData.budgetyCount}\n\n【長さ出し左右本数】\n・${formData.visitreservationCount}\n\n【重要項目の同意】\n・${formData.informationCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
