--- a/index.html
+++ b/index.html
@@ -714,8 +714,8 @@
             const message = document.getElementById('message').value;
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
-    // message4をpriorityCountに代入
-    const priorityCount = message4;
+            const message4 = document.getElementById('message4').value;
+            const priorityCount = message4;
             const message5 = document.getElementById('message5').value;
             const message7 = document.getElementById('message7').value;
             priorityCount: priorityCount;
