--- a/index.html
+++ b/index.html
@@ -762,31 +762,31 @@
 
             // フォームデータのチェック
             if (!formData.priorityCount) {
-                alert('ご職業をご選択ください。');
+                alert('気になるお悩みをご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.demandCount) {
-                alert('来店動機をご選択ください。');
+                alert('興味を持ったきっかけをご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.chanceCount) {
-                alert('来店頻度をご選択ください。');
+                alert('受けてみたいメニューをご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.IntroductionCount) {
-                alert('過去施術をご選択ください。');
+                alert('年齢層をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.deliveryCount) {
-                alert('薬品/ネイルでのアレルギーをご選択ください。');
+                alert('性別をご選択ください。');
                 return;
             }
 
