--- a/index.html
+++ b/index.html
@@ -715,7 +715,6 @@
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
             const message4 = document.getElementById('message4').value;
-            const priorityCount = message4;
             const message5 = document.getElementById('message5').value;
             const message7 = document.getElementById('message7').value;
             priorityCount: priorityCount;
@@ -805,7 +804,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【氏名（漢字）】\n・${formData.message}\n\n【氏名（カナ）】\n・${formData.message2}\n\n【生年月日】\n・${formData.message3}\n\n【気になるお悩み】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}\n\n【お住まい】\n・${formData.message5}\n\n【知人の紹介名】\n・${formData.message7}\n\n【来店頻度】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n【長さ出し左右本数】\n・${formData.message8}\n\n【重要項目の同意】\n・${formData.budgetyCount}\n\n【長さ出し左右本数】\n・${formData.visitreservationCount}\n\n【重要項目の同意】\n・${formData.informationCount}`
+                text: `≪アンケート≫\n【氏名（漢字）】\n・${formData.message}\n\n【氏名（カナ）】\n・${formData.message2}\n\n【生年月日】\n・${formData.message3}\n\n【気になるお悩み】\n・${formData.priorityCount}${formData.message4}\n\n【興味を持ったきっかけ】\n・${formData.demandCount}${formData.message5}\n\n【受けてみたいメニュー】\n・${formData.chanceCount}${formData.message7}\n\n【年齢層】\n・${formData.IntroductionCount}\n\n【性別】\n・${formData.deliveryCount}\n\n【受け取りたい情報】\n・${formData.visitreservationCount}\n\n【ご来院について】\n・${formData.informationCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
