--- a/index.html
+++ b/index.html
@@ -785,9 +785,12 @@
 
 
     // 各オプションの空チェック付きテキスト組み立て
-    const message4Text = formData.message4 ? `${formData.message4}` : '';
-    const message5Text = formData.message5 ? `${formData.message5}` : '';
-    const message7Text = formData.message7 ? `${formData.message7}` : '';
+    const priorityText = formData.priorityCount ? `\n・${formData.priorityCount}` : '';
+    const message4Text = formData.message4 ? `\n・${formData.message4}` : '';
+    const demandText = formData.demandCount ? `\n・${formData.demandCount}` : '';
+    const message5Text = formData.message5 ? `\n・${formData.message5}` : '';
+    const chanceText = formData.chanceCount ? `\n・${formData.chanceCount}` : '';
+    const message7Text = formData.message7 ? `\n・${formData.message7}` : '';
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
