--- a/index.html
+++ b/index.html
@@ -795,11 +795,17 @@ function selectpriority(element) {
 
 
     // 各オプションの空チェック付きテキスト組み立て
-    const priorityText = formData.priorityCount ? `\n・${formData.priorityCount}` : '';
+    const priorityText = formData.priorityCount && formData.priorityCount.length > 0
+  ? `\n・${formData.priorityCount.join('\n・')}`
+  : '';
     const message4Text = formData.message4 ? `\n・${formData.message4}` : '';
-    const demandText = formData.demandCount ? `\n・${formData.demandCount}` : '';
+    const demandText = formData.demandCount && formData.demandCount.length > 0
+  ? `\n・${formData.demandCount.join('\n・')}`
+  : '';
     const message5Text = formData.message5 ? `\n・${formData.message5}` : '';
-    const chanceText = formData.chanceCount ? `\n・${formData.chanceCount}` : '';
+    const chanceText = formData.chanceCount && formData.chanceCount.length > 0
+  ? `\n・${formData.chanceCount.join('\n・')}`
+  : '';
     const message7Text = formData.message7 ? `\n・${formData.message7}` : '';
 
     // LINEトークにメッセージを送信
