--- a/index.html
+++ b/index.html
@@ -795,9 +795,10 @@ function selectpriority(element) {
 
 
     // 各オプションの空チェック付きテキスト組み立て
-const priorityText = formData.priorityCount && formData.priorityCount.length > 0
-    ? '\n・' + formData.priorityCount.join('\n・')
-    : '';
+const priorityText = formData.priorityCount && formData.priorityCount.length
+  ? '\n' + formData.priorityCount.map(item => `・${item}`).join('\n')
+  : '';
+
     const message4Text = formData.message4 ? `\n・${formData.message4}` : '';
     const demandText = formData.demandCount ? `\n・${formData.demandCount}` : '';
     const message5Text = formData.message5 ? `\n・${formData.message5}` : '';
