--- a/index.html
+++ b/index.html
@@ -609,6 +609,7 @@
         let informationCount = '';
         let priorityCount = []; // 選択された優先度のリスト
         let chanceCount = []; // 選択された優先度のリスト
+        let demandCount = []; // 選択された優先度のリスト
         let IntroductionCount = '';
         let deliveryCount = '';
         let budgetyCount = '';
