--- a/index.html
+++ b/index.html
@@ -641,23 +641,22 @@
         }
 
 function selectpriority(element) {
-    const text = element.innerText;
+    // 改行や複数スペースを1つのスペースに変換し、余計な空白をトリム
+    const text = element.innerText.replace(/\s*\n\s*/g, ' ').trim();
 
     // active クラスの切り替え（トグル）
     element.classList.toggle('active');
 
     // 配列に追加または削除
     if (element.classList.contains('active')) {
-        // 重複チェックしてから追加
         if (!priorityCount.includes(text)) {
             priorityCount.push(text);
         }
     } else {
-        // 非アクティブなら削除
         priorityCount = priorityCount.filter(item => item !== text);
     }
 
-    console.log(priorityCount); // 確認用
+    console.log(priorityCount); // デバッグ確認
 }
 
 function selectdemand(element) {
@@ -681,23 +680,22 @@ function selectdemand(element) {
 }
 
 function selectchance(element) {
-    const text = element.innerText;
+    // 改行や複数スペースを1つのスペースに変換し、余計な空白をトリム
+    const text = element.innerText.replace(/\s*\n\s*/g, ' ').trim();
 
     // active クラスの切り替え（トグル）
     element.classList.toggle('active');
 
     // 配列に追加または削除
     if (element.classList.contains('active')) {
-        // 重複チェックしてから追加
         if (!chanceCount.includes(text)) {
             chanceCount.push(text);
         }
     } else {
-        // 非アクティブなら削除
         chanceCount = chanceCount.filter(item => item !== text);
     }
 
-    console.log(chanceCount); // 確認用
+    console.log(chanceCount); // デバッグ確認
 }
 
         function selectIntroduction(element) {
