--- a/index.html
+++ b/index.html
@@ -1547,7 +1547,7 @@ const irradiationsText = formData.irradiationsCount || 'なし';
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n【指名】：${formData.visitCount}\nご来店回数：${formData.nominationCount}\nメニュー：${selectedSymptomText}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n【指名】：${formData.visitCount}\nご来店回数：${formData.secondanniversaryCount}\nメニュー：${selectedSymptomText}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
